--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "private": false,
   "dependencies": {
     "axios": "^0.20.0",
-    "freenit": "^0.0.25",
+    "freenit": "^0.0.27",
     "prop-types": "^15.7.2",
     "radium": "^0.26.0",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^3.4.3"
+    "react-scripts": "^3.4.3",
+    "socket.io-client": "^2.3.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.11.6",
