--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "0.0.4",
   "private": false,
   "dependencies": {
+    "ansispan": "^0.0.4",
     "axios": "^0.21.0",
     "freenit": "^0.0.27",
+    "html-react-parser": "^0.14.1",
     "prop-types": "^15.7.2",
     "radium": "^0.26.1",
     "react": "^17.0.1",
