--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.4",
   "private": false,
   "dependencies": {
+    "ansi-to-react": "^6.0.8",
     "ansispan": "^0.0.4",
     "axios": "^0.21.0",
     "freenit": "^0.0.27",
